# fishpage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  codecov.yml  docker-entrypoint.sh  fly.toml  justfile  litestream.yml  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml
docs/: template-extraction-plan.md
docs/adr/: 0001-sku-permanent-key-upsert-never-delete.md  0002-size-column-is-overloaded.md  0003-ty-as-typecheck-gate.md  0004-fuzzy-name-search-scorers.md  0005-watched-folder-polling-trigger.md  0006-header-derived-column-boundaries.md  0007-deploy-to-flyio-cloud-not-unraid.md  0008-sqlite-litestream-object-storage.md  0009-opentelemetry-grafana-cloud-stale-catalog-alert.md  0010-opentofu-bootstrap-for-cloud-infra.md  0011-enrichment-ai-classifiers-sourced-images.md  0012-server-rendered-htmx-handrolled-css.md  0013-trust-cloudflare-access-email-as-uploader.md  0014-pick-list-per-actor-export-then-clear.md  0015-append-only-stocklist-history.md
docs/agents/: branch-workflow.md  code-comments.md  domain.md  issue-tracker.md  triage-labels.md
docs/spikes/0071-auto-image-source/: FINDINGS.md  probe.py  results.csv  results.json  sample.csv
fishpage/: __main__.py  access.py  app.py  boot.py  browse.py  catalog.py  category.py  config.py  drainer.py  enricher.py  images.py  imagesource.py  ingest.py  migrations.py  models.py  observability.py  parser.py  render.py  restore.py  search.py  store.py
fishpage/static/: app.css
fishpage/templates/: _cards.html  _grid.html  _pick_button.html  _pick_list.html  base.html  catalog.html  pick_list.html  upload.html
grafana/alerting/: held-parse.yaml  stale-catalog.yaml
infra/: .gitignore  .terraform.lock.hcl  README.md  backend.hcl.example  cloudflare.tf  github.tf  grafana.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_access.py  test_api.py  test_boot.py  test_browse.py  test_catalog.py  test_category.py  test_config.py  test_drainer.py  test_enricher.py  test_images.py  test_imagesource.py  test_ingest.py  test_logging.py  test_main.py  test_migrations.py  test_observability.py  test_optimize.py  test_parser.py  test_pick_list.py  test_reconcile.py  test_reuse_guard.py  test_search.py  test_store.py  test_ui.py  test_upload.py
tests/fixtures/: make_malformed_stocklist.py
