[project]
name = "fishpage"
version = "0.1.0"
description = "Internal browse tool over the SDC freshwater Stocklist PDF"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pdfplumber>=0.11",
    "jinja2>=3.1",
]

[project.scripts]
fishpage = "fishpage.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fishpage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
