[project]
name = "fishpage"
version = "0.1.0"
description = "Internal browse tool over the SDC freshwater Stocklist PDF"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pdfplumber>=0.11",
    "jinja2>=3.1",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
fishpage = "fishpage.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff",
    "ty",
    "rust-just",
    "fpdf2>=2.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fishpage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "pytest_cov", "--cov=fishpage", "--cov-report=term-missing", "--cov-report=xml"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
