[project]
name = "fishpage"
version = "0.1.0"
description = "Internal browse tool over the SDC freshwater Stocklist PDF"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
    "pdfplumber>=0.11",
    "jinja2>=3.1",
    "rapidfuzz>=3.14.5",
    "anthropic>=0.69",
    "boto3>=1.34",
    "pillow>=11",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
]

[project.scripts]
fishpage = "fishpage.__main__:main"
fishpage-restore = "fishpage.restore:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff",
    "ty",
    "rust-just",
    "fpdf2>=2.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fishpage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "pytest_cov", "--cov=fishpage", "--cov-report=term-missing", "--cov-report=xml"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter markers are evaluated once at import as the route's dependency spec, not as a
# real mutable default — the documented idiom. Header/Form are already exempt by default; add Query.
extend-immutable-calls = ["fastapi.Query"]
